--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@ Physical Rejuvenation
 <div class="bg-white rounded-lg shadow-md overflow-hidden transition-all hover:shadow-lg">
 <div class="p-6 border-b">
 <h3 class="text-2xl font-semibold mb-2">Digital Download</h3>
-<div class="text-3xl font-bold text-primary mb-4">$49</div>
+<div class="text-3xl font-bold text-primary mb-4">$84</div>
 <p class="text-gray-600">Experience the journey on your own schedule.</p>
 </div>
 <div class="p-6">
@@ -743,7 +743,7 @@ Physical Rejuvenation
 <span>Community integration</span>
 </li>
 </ul>
-<a href="https://square.link/u/SAWStSqx" class="block w-full bg-white border-2 border-primary text-primary hover:bg-primary hover:text-white font-bold py-3 px-4 rounded-button text-center transition-colors whitespace-nowrap">
+<a href="https://checkout.square.site/merchant/MLQ7A0VS7TD5D/checkout/ERLCVITDYNT76Q4OEQPYSV33" class="block w-full bg-white border-2 border-primary text-primary hover:bg-primary hover:text-white font-bold py-3 px-4 rounded-button text-center transition-colors whitespace-nowrap">
 Get Download
 </a>
 </div>
@@ -755,7 +755,7 @@ MOST POPULAR
 </div>
 <div class="p-6 border-b">
 <h3 class="text-2xl font-semibold mb-2">Live Online Retreat</h3>
-<div class="text-3xl font-bold text-primary mb-4">$97 <span class="text-lg text-gray-500 line-through">$129</span></div>
+<div class="text-3xl font-bold text-primary mb-4">$144 <span class="text-lg text-gray-500 line-through">$179</span></div>
 <p class="text-gray-600">Join our next guided group experience.</p>
 </div>
 <div class="p-6">
@@ -782,7 +782,7 @@ MOST POPULAR
 <div class="w-6 h-6 flex items-center justify-center text-primary mr-2 mt-0.5">
 <i class="ri-check-line"></i>
 </div>
-<span>Discord community access (1 month)</span>
+<span>Discord community access</span>
 </li>
 <li class="flex items-start">
 <div class="w-6 h-6 flex items-center justify-center text-primary mr-2 mt-0.5">
@@ -791,7 +791,7 @@ MOST POPULAR
 <span>Post-journey integration session</span>
 </li>
 </ul>
-<a href="https://square.link/u/tDZwMN5k" class="block w-full bg-accent hover:bg-opacity-90 text-dark font-bold py-3 px-4 rounded-button text-center transition-colors whitespace-nowrap">
+<a href="https://checkout.square.site/merchant/MLQ7A0VS7TD5D/checkout/PDDDTEBWDOVZEFDFZQM347I7" class="block w-full bg-accent hover:bg-opacity-90 text-dark font-bold py-3 px-4 rounded-button text-center transition-colors whitespace-nowrap">
 Reserve Your Spot
 </a>
 </div>
@@ -799,9 +799,9 @@ Reserve Your Spot
 <!-- Premium Package -->
 <div class="bg-white rounded-lg shadow-md overflow-hidden transition-all hover:shadow-lg">
 <div class="p-6 border-b">
-<h3 class="text-2xl font-semibold mb-2">Complete Bundle</h3>
-<div class="text-3xl font-bold text-primary mb-4">$147</div>
-<p class="text-gray-600">The ultimate transformational package.</p>
+<h3 class="text-2xl font-semibold mb-2">DFTC Genesis Bundle</h3>
+<div class="text-3xl font-bold text-primary mb-4">$240</div>
+<p class="text-gray-600">The Ultimate Membership Package.</p>
 </div>
 <div class="p-6">
 <ul class="space-y-4 mb-8">
@@ -815,7 +815,7 @@ Reserve Your Spot
 <div class="w-6 h-6 flex items-center justify-center text-primary mr-2 mt-0.5">
 <i class="ri-check-line"></i>
 </div>
-<span>3 months Discord community access</span>
+<span>Exclusive Genisis NFT (1 of 100)</span>
 </li>
 <li class="flex items-start">
 <div class="w-6 h-6 flex items-center justify-center text-primary mr-2 mt-0.5">
@@ -833,11 +833,11 @@ Reserve Your Spot
 <div class="w-6 h-6 flex items-center justify-center text-primary mr-2 mt-0.5">
 <i class="ri-check-line"></i>
 </div>
-<span>Early access to future journeys</span>
+<span>Genesis NFT Membership Benefits</span>
 </li>
 </ul>
-<a href="https://square.link/u/lXBQFtld" class="block w-full bg-white border-2 border-primary text-primary hover:bg-primary hover:text-white font-bold py-3 px-4 rounded-button text-center transition-colors whitespace-nowrap">
-Get Complete Bundle
+<a href="https://checkout.square.site/merchant/MLQ7A0VS7TD5D/checkout/N5ZJFPXUVRHNJSPVX7DWII73" class="block w-full bg-white border-2 border-primary text-primary hover:bg-primary hover:text-white font-bold py-3 px-4 rounded-button text-center transition-colors whitespace-nowrap">
+Complete NFT Bundle
 </a>
 </div>
 </div>
@@ -849,7 +849,7 @@ Get Complete Bundle
 </div>
 <div>
 <h3 class="text-xl font-semibold mb-2">100% Satisfaction Guarantee</h3>
-<p class="text-gray-600">If you don't feel a positive shift after experiencing the complete journey, simply contact us within 14 days for a full refund. We stand behind the transformative power of these frequencies.</p>
+<p class="text-gray-600">All sales are final. We stand behind the transformative power of these frequencies.</p>
 </div>
 </div>
 </div>
@@ -1000,18 +1000,18 @@ Get Complete Bundle
 </div>
 </div>
 </section>
-<!-- About Section -->
+<!-- About Section --> 
 <section id="about" class="py-20 bg-gray-50">
 <div class="container mx-auto px-4">
 <div class="flex flex-col md:flex-row gap-12 items-center">
 <div class="w-full md:w-1/2">
-<img src="https://readdy.ai/api/search-image?query=professional%20sound%20healer%20in%20a%20studio%20with%20sound%20equipment%2C%20headphones%2C%20and%20frequency%20visualization%20screens%2C%20warm%20lighting%2C%20creative%20atmosphere%2C%20high%20quality%20photorealistic%20portrait&width=600&height=600&seq=about-image-1&orientation=squarish" alt="Q2K Sound Healer" class="rounded-lg shadow-md w-full object-cover object-top">
+<img src="https://raw.githubusercontent.com/downforthecause/github.io/refs/heads/main/vdsvs%20(1)%20(1).JPG" alt="Q2K Sound Healer" class="rounded-lg shadow-md w-full object-cover object-top">
 </div>
 <div class="w-full md:w-1/2">
 <h2 class="text-3xl md:text-4xl font-semibold mb-6">About Q2K & Down For The Cause</h2>
 <p class="text-lg text-gray-700 mb-6">Hi, I'm Quinnton (Q2K), a music producer and sound healer with over 15 years of experience in frequency work and binaural beat technology. My journey into sound healing began when I discovered how specific frequencies could dramatically shift my own state of consciousness and well-being.</p>
 <p class="text-lg text-gray-700 mb-6">After years of research and experimentation, I developed the 160-minute Solfeggio Binaural Sonic Journey as a comprehensive approach to sound healing that addresses the whole person—physical, emotional, and spiritual.</p>
-<p class="text-lg text-gray-700 mb-8">My mission with "Down For The Cause" is to make transformative sound healing accessible to everyone, regardless of their meditation experience or background. A portion of all proceeds goes toward reuniting families separated by circumstance—a cause deeply personal to me.</p>
+<p class="text-lg text-gray-700 mb-8">My mission with "Down For The Cause" is to make transformative sound healing accessible to everyone, regardless of their meditation experience or background.</p>
 <div class="flex flex-col sm:flex-row gap-4">
 <a href="#" class="bg-primary hover:bg-opacity-90 text-white font-bold py-3 px-6 rounded-button text-center transition-colors whitespace-nowrap">
 My Full Story
@@ -1109,226 +1109,6 @@ Contact Me
 </div>
 </div>
 </section>
-<!-- Call-to-Action Area -->
-<section class="py-20 bg-gradient-to-br from-primary/5 via-secondary/5 to-accent/5">
-<div class="container mx-auto px-4">
-<div class="max-w-4xl mx-auto bg-white rounded-lg shadow-md overflow-hidden">
-<div class="flex flex-col md:flex-row">
-<div class="w-full md:w-1/2 p-8 md:p-12">
-<h2 class="text-3xl font-semibold mb-4">Begin Your Sonic Journey</h2>
-<p class="text-gray-600 mb-6">Join our next live retreat on June 15, 2025, or get instant access to the downloadable journey today.</p>
-<div class="space-y-6 mb-8">
-<div class="flex items-center">
-<div class="w-6 h-6 flex items-center justify-center text-accent mr-2">
-<i class="ri-check-line"></i>
-</div>
-<span>Transform your consciousness</span>
-</div>
-<div class="flex items-center">
-<div class="w-6 h-6 flex items-center justify-center text-accent mr-2">
-<i class="ri-check-line"></i>
-</div>
-<span>Release emotional blocks</span>
-</div>
-<div class="flex items-center">
-<div class="w-6 h-6 flex items-center justify-center text-accent mr-2">
-<i class="ri-check-line"></i>
-</div>
-<span>Experience deep relaxation</span>
-</div>
-<div class="flex items-center">
-<div class="w-6 h-6 flex items-center justify-center text-accent mr-2">
-<i class="ri-check-line"></i>
-</div>
-<span>Connect with your higher self</span>
-</div>
-</div>
-<a href="#pricing" class="block w-full bg-accent hover:bg-opacity-90 text-dark font-bold py-3 px-6 rounded-button text-center transition-colors mb-4 whitespace-nowrap">
-Secure Your Spot Now
-</a>
-<p class="text-sm text-gray-500 text-center">Only 12 spots remaining for the next retreat</p>
-</div>
-<div class="w-full md:w-1/2 bg-primary bg-opacity-10 p-8 md:p-12">
-<h3 class="text-xl font-semibold mb-4">Stay Connected</h3>
-<p class="text-gray-600 mb-6">Subscribe to receive updates on future retreats, new frequency journeys, and exclusive sound healing insights.</p>
-<form class="space-y-4">
-<div>
-<label for="name" class="block text-sm font-medium text-gray-700 mb-1">Your Name</label>
-<input type="text" id="name" class="w-full px-4 py-2 border-none rounded focus:ring-2 focus:ring-primary focus:outline-none" placeholder="Enter your name">
-</div>
-<div>
-<label for="email" class="block text-sm font-medium text-gray-700 mb-1">Email Address</label>
-<input type="email" id="email" class="w-full px-4 py-2 border-none rounded focus:ring-2 focus:ring-primary focus:outline-none" placeholder="Enter your email">
-</div>
-<div>
-<input type="checkbox" id="consent" class="custom-checkbox">
-<label for="consent" class="checkbox-label text-sm text-gray-600">I consent to receive occasional emails about sound healing journeys and special offers. You can unsubscribe at any time.</label>
-</div>
-<button type="submit" class="w-full bg-primary hover:bg-opacity-90 text-white font-bold py-3 px-6 rounded-button text-center transition-colors whitespace-nowrap">
-Subscribe
-</button>
-</form>
-</div>
-</div>
-</div>
-</div>
-</section>
-<!-- Contact Section -->
-<section id="contact" class="py-20 bg-white">
-<div class="container mx-auto px-4">
-<div class="text-center mb-16">
-<h2 class="text-3xl md:text-4xl font-semibold mb-4">Get in Touch</h2>
-<p class="text-lg max-w-3xl mx-auto text-gray-700">Have questions about the Solfeggio Binaural Sonic Journey? Reach out and I'll get back to you as soon as possible.</p>
-</div>
-<div class="max-w-4xl mx-auto">
-<div class="flex flex-col md:flex-row gap-8">
-<div class="w-full md:w-1/3">
-<div class="bg-gray-50 rounded-lg p-6 h-full">
-<h3 class="text-xl font-semibold mb-6">Contact Information</h3>
-<div class="space-y-6">
-<div class="flex items-start">
-<div class="w-10 h-10 flex items-center justify-center text-primary mr-4 mt-1">
-<i class="ri-mail-line ri-lg"></i>
-</div>
-<div>
-<h4 class="font-medium mb-1">Email</h4>
-<p class="text-gray-600">hello@downforthecause.com</p>
-</div>
-</div>
-<div class="flex items-start">
-<div class="w-10 h-10 flex items-center justify-center text-primary mr-4 mt-1">
-<i class="ri-discord-line ri-lg"></i>
-</div>
-<div>
-<h4 class="font-medium mb-1">Discord</h4>
-<p class="text-gray-600">Join our community server</p>
-</div>
-</div>
-<div class="flex items-start">
-<div class="w-10 h-10 flex items-center justify-center text-primary mr-4 mt-1">
-<i class="ri-time-line ri-lg"></i>
-</div>
-<div>
-<h4 class="font-medium mb-1">Response Time</h4>
-<p class="text-gray-600">Within 24-48 hours</p>
-</div>
-</div>
-</div>
-<div class="mt-8">
-<h4 class="font-medium mb-4">Follow Us</h4>
-<div class="flex space-x-4">
-<a href="#" class="w-10 h-10 flex items-center justify-center bg-primary text-white rounded-full hover:bg-opacity-90 transition-colors">
-<i class="ri-instagram-line"></i>
-</a>
-<a href="#" class="w-10 h-10 flex items-center justify-center bg-primary text-white rounded-full hover:bg-opacity-90 transition-colors">
-<i class="ri-youtube-line"></i>
-</a>
-<a href="#" class="w-10 h-10 flex items-center justify-center bg-primary text-white rounded-full hover:bg-opacity-90 transition-colors">
-<i class="ri-spotify-line"></i>
-</a>
-<a href="#" class="w-10 h-10 flex items-center justify-center bg-primary text-white rounded-full hover:bg-opacity-90 transition-colors">
-<i class="ri-facebook-line"></i>
-</a>
-</div>
-</div>
-</div>
-</div>
-<div class="w-full md:w-2/3">
-<form class="bg-gray-50 rounded-lg p-6">
-<h3 class="text-xl font-semibold mb-6">Send a Message</h3>
-<div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
-<div>
-<label for="contact-name" class="block text-sm font-medium text-gray-700 mb-1">Your Name</label>
-<input type="text" id="contact-name" class="w-full px-4 py-2 border-none rounded focus:ring-2 focus:ring-primary focus:outline-none" placeholder="Enter your name">
-</div>
-<div>
-<label for="contact-email" class="block text-sm font-medium text-gray-700 mb-1">Email Address</label>
-<input type="email" id="contact-email" class="w-full px-4 py-2 border-none rounded focus:ring-2 focus:ring-primary focus:outline-none" placeholder="Enter your email">
-</div>
-</div>
-<div class="mb-6">
-<label for="subject" class="block text-sm font-medium text-gray-700 mb-1">Subject</label>
-<input type="text" id="subject" class="w-full px-4 py-2 border-none rounded focus:ring-2 focus:ring-primary focus:outline-none" placeholder="What is this regarding?">
-</div>
-<div class="mb-6">
-<label for="message" class="block text-sm font-medium text-gray-700 mb-1">Message</label>
-<textarea id="message" rows="5" class="w-full px-4 py-2 border-none rounded focus:ring-2 focus:ring-primary focus:outline-none" placeholder="How can we help you?"></textarea>
-</div>
-<button type="submit" class="bg-primary hover:bg-opacity-90 text-white font-bold py-3 px-6 rounded-button transition-colors whitespace-nowrap">
-Send Message
-</button>
-</form>
-</div>
-</div>
-</div>
-</div>
-</section>
-<!-- Footer -->
-<footer class="bg-gray-900 text-white py-12">
-<div class="container mx-auto px-4">
-<div class="flex flex-col md:flex-row justify-between mb-12">
-<div class="mb-8 md:mb-0">
-<a href="#" class="text-2xl font-['Pacifico'] text-white mb-4 inline-block">Down For The Cause</a>
-<p class="text-gray-400 max-w-xs">Transformative sound healing experiences through sacred frequencies and binaural technology.</p>
-<div class="mt-6 flex space-x-4">
-<a href="#" class="text-gray-400 hover:text-white transition-colors">
-<i class="ri-instagram-line ri-lg"></i>
-</a>
-<a href="#" class="text-gray-400 hover:text-white transition-colors">
-<i class="ri-youtube-line ri-lg"></i>
-</a>
-<a href="#" class="text-gray-400 hover:text-white transition-colors">
-<i class="ri-spotify-line ri-lg"></i>
-</a>
-<a href="#" class="text-gray-400 hover:text-white transition-colors">
-<i class="ri-facebook-line ri-lg"></i>
-</a>
-</div>
-</div>
-<div class="grid grid-cols-2 md:grid-cols-3 gap-8">
-<div>
-<h4 class="text-lg font-medium mb-4">Quick Links</h4>
-<ul class="space-y-2">
-<li><a href="#" class="text-gray-400 hover:text-white transition-colors">Home</a></li>
-<li><a href="#journey" class="text-gray-400 hover:text-white transition-colors">Journey</a></li>
-<li><a href="#pricing" class="text-gray-400 hover:text-white transition-colors">Pricing</a></li>
-<li><a href="#testimonials" class="text-gray-400 hover:text-white transition-colors">Testimonials</a></li>
-<li><a href="#about" class="text-gray-400 hover:text-white transition-colors">About</a></li>
-</ul>
-</div>
-<div>
-<h4 class="text-lg font-medium mb-4">Resources</h4>
-<ul class="space-y-2">
-<li><a href="#" class="text-gray-400 hover:text-white transition-colors">Blog</a></li>
-<li><a href="#" class="text-gray-400 hover:text-white transition-colors">Frequency Guide</a></li>
-<li><a href="#" class="text-gray-400 hover:text-white transition-colors">Sound Healing Research</a></li>
-<li><a href="#" class="text-gray-400 hover:text-white transition-colors">FAQ</a></li>
-</ul>
-</div>
-<div>
-<h4 class="text-lg font-medium mb-4">Legal</h4>
-<ul class="space-y-2">
-<li><a href="#" class="text-gray-400 hover:text-white transition-colors">Terms of Service</a></li>
-<li><a href="#" class="text-gray-400 hover:text-white transition-colors">Privacy Policy</a></li>
-<li><a href="#" class="text-gray-400 hover:text-white transition-colors">Refund Policy</a></li>
-<li><a href="#" class="text-gray-400 hover:text-white transition-colors">Cookie Policy</a></li>
-</ul>
-</div>
-</div>
-</div>
-<div class="pt-8 border-t border-gray-800 flex flex-col md:flex-row justify-between items-center">
-<p class="text-gray-400 mb-4 md:mb-0">© 2025 Down For The Cause. All rights reserved.</p>
-<div class="flex items-center space-x-4">
-<div class="text-gray-400 flex items-center">
-<i class="ri-paypal-line ri-lg mr-2"></i>
-<i class="ri-visa-line ri-lg mr-2"></i>
-<i class="ri-mastercard-line ri-lg mr-2"></i>
-<i class="ri-bank-card-line ri-lg"></i>
-</div>
-</div>
-</div>
-</div>
-</footer>
 <!-- Scripts -->
 <script id="mobileMenuToggle">
 document.addEventListener('DOMContentLoaded', function() {
